# Test0822

./: .gitignore  CMakeLists.txt
Test0822/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
Test0822.xcodeproj/: project.pbxproj
Test0822.xcodeproj/project.xcworkspace/xcuserdata/sodino.xcuserdatad/: UserInterfaceState.xcuserstate
Test0822.xcodeproj/xcuserdata/sodino.xcuserdatad/xcschemes/: xcschememanagement.plist
